avance del proyecto

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
     <!-- PRODUCTOS -->
     <main>
       <h1>Productos</h1>
-      <article id="publicaciones" class="row">
+      <div id="publi" class="row">
 
-      </article>
+      </div>
 
 
 
@@ -206,6 +206,7 @@
     <script>
       AOS.init();
     </script>
+    <script src="productos.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
