--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- MENÚ DE NAVEGACIÓN -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navegación</a>
+        <button class="navbar-brand" id="identificarse">Identificarte</button>
         <button
           class="navbar-toggler"
           type="button"
